fix: simplify npm install in all workflows
- Replace multiple npm ci commands with single 'npm ci --workspaces'
- Fixes 'Cannot find module next/jest' error in frontend tests
- Ensures all workspace dependencies are installed correctly
- Applied to test.yml, backend-deploy.yml, and frontend-deploy.yml

--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -48,9 +48,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci
-          npm ci --workspace=shared
-          npm ci --workspace=backend
+          npm ci --workspaces
 
       - name: Run linter
         run: npm run lint --workspace=backend
