fix: ensure all workspaces are installed explicitly
- Change from 'npm ci --workspaces' to explicit workspace list
- Fixes issue where only backend was being installed
- Ensures shared, frontend, and backend are all installed
- Applied to all workflow files

--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -48,7 +48,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci --workspaces
+          npm ci
+          npm ci --workspace=shared --workspace=frontend --workspace=backend
 
       - name: Run linter
         run: npm run lint --workspace=backend
