--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -56,7 +56,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci --workspaces
+          npm ci
+          npm ci --workspace=shared --workspace=frontend --workspace=backend
 
       - name: Run linter
         run: npm run lint --workspace=frontend
