fix: add shared package build step and fix TypeScript types
- Add 'npm run build --workspace=shared' before linting/testing
- Fix getRetryableTableClient generic constraint to use TableEntity
- Ensures @qr-attendance/shared is available for imports
- Applied to all workflow files

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -59,6 +59,9 @@ jobs:
           npm ci
           npm ci --workspace=shared --workspace=frontend --workspace=backend
 
+      - name: Build shared package
+        run: npm run build --workspace=shared
+
       - name: Run linter
         run: npm run lint --workspace=frontend
 
