--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -51,6 +51,9 @@ jobs:
           npm ci
           npm ci --workspace=shared --workspace=frontend --workspace=backend
 
+      - name: Build shared package
+        run: npm run build --workspace=shared
+
       - name: Run linter
         run: npm run lint --workspace=backend
 
