--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,9 @@ jobs:
           npm ci
           npm ci --workspace=shared --workspace=frontend --workspace=backend
 
+      - name: Build shared package
+        run: npm run build --workspace=shared
+
       - name: Run linter (Frontend)
         run: npm run lint --workspace=frontend
 
