Fix frontend property test script to pass when no tests found
Add --passWithNoTests flag to test:property script since frontend
doesn't have any property-based tests yet. This prevents CI failure.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "test": "jest",
     "test:unit": "jest --testPathPattern=\\.test\\.tsx?$",
-    "test:property": "jest --testPathPattern=\\.property\\.test\\.tsx?$"
+    "test:property": "jest --testPathPattern=\\.property\\.test\\.tsx?$ --passWithNoTests"
   },
   "dependencies": {
     "@azure/msal-browser": "^3.7.1",
