--- a/shared/package.json
+++ b/shared/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "prepare": "tsc",
     "watch": "tsc --watch",
     "test": "jest",
     "test:unit": "jest --testPathPattern=\\.test\\.ts$",
