Fix Azure Static Web Apps deployment path
When skip_app_build is true, app_location should point to the directory
containing the built files (frontend/out), not the source directory.
Set output_location to empty string since we're already pointing to the
final output directory.

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -83,9 +83,9 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "/frontend"
+          app_location: "/frontend/out"
           api_location: ""
-          output_location: "out"
+          output_location: ""
           skip_app_build: true
 
       - name: Upload build artifacts
