docs: consolidate CI/CD documentation and update workflow guides
- Add comprehensive GitHub Actions workflows README with setup instructions
- Create CICD_SETUP.md documentation for complete CI/CD configuration
- Add PROJECT_STATUS.md to track current deployment status
- Update backend and infrastructure deployment workflows with improved clarity
- Add azure-cicd-credentials.json template for credential management
- Add setup-cicd-credentials.sh script to automate credential generation
- Update GETTING_STARTED.md with current setup procedures
- Update main README.md with CI/CD references
- Remove obsolete documentation files (CONTEXT_SUMMARY.md, DOCUMENTATION_CONSOLIDATION.md, FINAL_DEPLOYMENT_SUMMARY.md)
- Consolidate scattered CI/CD documentation into centralized docs/README.md
- Improve workflow documentation to clarify required vs optional workflows
- Provide clear troubleshooting guides for common deployment issues

--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -1,20 +1,11 @@
 name: Infrastructure - Deploy
 
 # Deploy Azure infrastructure using Bicep templates
-# Triggers on push to infrastructure files and manual dispatch
+# OPTIONAL: Only runs on manual dispatch
+# Required secrets must be configured first (see docs/CICD_SETUP.md)
+# If infrastructure is already deployed manually, this workflow is not needed
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'infrastructure/**'
-      - '.github/workflows/infrastructure-deploy.yml'
-  pull_request:
-    branches:
-      - main
-    paths:
-      - 'infrastructure/**'
   workflow_dispatch:
     inputs:
       environment:
