--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -47,9 +47,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: |
-          npm ci
-          npm ci --workspace=shared --workspace=frontend --workspace=backend
+        run: npm ci
 
       - name: Build shared package
         run: npm run build --workspace=shared
