fix: PWA icons and Azure AD authentication
- Regenerate PWA icons (192x192 and 512x512) from SVG with proper sizes
- Add mobile-web-app-capable meta tag to fix deprecation warning
- Update Azure AD redirect URI to match actual Static Web App URL
- Fix staticwebapp.config.json with correct tenant ID
- Add icon generation script for future updates

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -128,7 +128,7 @@
     "identityProviders": {
       "azureActiveDirectory": {
         "registration": {
-          "openIdIssuer": "https://login.microsoftonline.com/{TENANT_ID}/v2.0",
+          "openIdIssuer": "https://login.microsoftonline.com/8ff7db19-435d-4c3c-83d3-ca0a46234f51/v2.0",
           "clientIdSettingName": "AAD_CLIENT_ID",
           "clientSecretSettingName": "AAD_CLIENT_SECRET"
         },
