--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "test": "jest",
     "test:unit": "jest --testPathPattern=\\.test\\.tsx?$",
-    "test:property": "jest --testPathPattern=\\.property\\.test\\.tsx?$ --passWithNoTests"
+    "test:property": "jest --testPathPattern=\\.property\\.test\\.tsx?$ --passWithNoTests",
+    "generate-icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
     "@azure/msal-browser": "^3.7.1",
@@ -37,6 +38,7 @@
     "fast-check": "^3.15.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "sharp": "^0.34.5",
     "typescript": "^5.3.3"
   }
 }
