--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -133,11 +133,13 @@
           "clientSecretSettingName": "AAD_CLIENT_SECRET"
         },
         "login": {
-          "loginParameters": ["scope=openid profile email"]
+          "loginParameters": ["scope=openid profile email"],
+          "nameClaimType": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name"
         },
         "userDetailsClaim": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name"
       }
-    }
+    },
+    "rolesSource": "/roles"
   },
   "globalHeaders": {
     "content-security-policy": "default-src 'self' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://*.signalr.net wss://*.service.signalr.net https://*.table.core.windows.net https://login.microsoftonline.com;",
