--- a/backend/.funcignore
+++ b/backend/.funcignore
@@ -15,7 +15,13 @@ node_modules/ts-jest
 node_modules/@typescript-eslint
 node_modules/eslint
 node_modules/fast-check
+node_modules/.bin
+node_modules/.package-lock.json
 src
 coverage
 *.test.js
 *.property.test.js
+.DS_Store
+.env
+.env.local
+.env.*.local
