feat(dev): add local development setup with mock authentication
- Add LOCAL_DEVELOPMENT_SETUP.md with comprehensive local dev guide
- Add DOCS_INDEX.md for centralized documentation navigation
- Add dev.sh and stop-dev.sh scripts for quick server startup/shutdown
- Add scripts/setup-local-dev.sh and scripts/start-local-dev.sh for automated setup
- Add frontend/.env.local.example template for environment configuration
- Add mock authentication endpoints: /api/auth/me, /api/auth/login, /api/auth/logout
- Add dev-config.tsx page for switching between teacher/student roles during development
- Update .gitignore to exclude frontend/.env.local and backend/local.settings.json
- Update frontend/next.config.js to support local development environment
- Update frontend/package.json with dev scripts and dependencies
- Update README.md and GETTING_STARTED.md with simplified local dev instructions
- Change frontend port from 3000 to 3001 to avoid conflicts
- Enables developers to run full stack locally with pre-configured Azure resources and mock auth

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ out/
 .env.development.local
 .env.test.local
 .env.production.local
+frontend/.env.local
+backend/local.settings.json
 local.settings.json
 
 # Archived files
