docs: add deployment guides and backend configuration improvements
- Add comprehensive backend deployment fix documentation with workspace resolution
- Add database management guide for local Azurite and production Azure Table Storage
- Add deployment completion checklist and updated deployment guide
- Add production environment configuration scripts (configure-production-env.sh, deploy-to-azure.sh)
- Add database reset scripts for both local and production environments
- Add verification script for local development setup
- Add SignalR authentication documentation and archived setup guides
- Implement getRoles Azure Function for role-based access control
- Update getTeacherSessions and getUserRoles functions with improved role handling
- Update frontend dev-config, index, and teacher pages with latest configurations
- Update static web app routing configuration and backup
- Update root and backend package.json with workspace restructuring and new dependencies
- Reorganize documentation with archive folder for historical setup guides
- Improve project documentation index and getting started guide
- Update README with latest deployment and configuration information

--- a/package.json
+++ b/package.json
@@ -4,20 +4,18 @@
   "description": "QR Chain Attendance System - Anti-cheat classroom attendance with peer-to-peer verification",
   "private": true,
   "workspaces": [
-    "frontend",
-    "backend",
-    "shared"
+    "frontend"
   ],
   "scripts": {
-    "install:all": "npm install && npm install --workspace=frontend && npm install --workspace=backend && npm install --workspace=shared",
+    "install:all": "npm install && npm install --prefix frontend && npm install --prefix backend",
     "dev:frontend": "npm run dev --workspace=frontend",
-    "dev:backend": "npm run start --workspace=backend",
+    "dev:backend": "cd backend && npm run start",
     "build:frontend": "npm run build --workspace=frontend",
-    "build:backend": "npm run build --workspace=backend",
-    "test": "npm run test --workspaces",
-    "test:unit": "npm run test:unit --workspaces",
-    "test:property": "npm run test:property --workspaces",
-    "lint": "npm run lint --workspaces"
+    "build:backend": "cd backend && npm run build",
+    "test": "npm run test --workspaces && cd backend && npm test",
+    "test:unit": "npm run test:unit --workspaces && cd backend && npm run test:unit",
+    "test:property": "npm run test:property --workspaces && cd backend && npm run test:property",
+    "lint": "npm run lint --workspaces && cd backend && npm run lint"
   },
   "keywords": [
     "attendance",
