docs: consolidate deployment documentation and update authentication headers
- Remove outdated BACKEND_DEPLOYMENT_FIX.md and DEPLOYMENT_COMPLETE.md files
- Add comprehensive DEPLOYMENT_CHECKLIST.md with pre-deployment verification steps
- Add DEPLOYMENT_HISTORY.md to track all deployment fixes and changes
- Update DOCS_INDEX.md and README.md with consolidated documentation references
- Add production environment configuration (.env.production) for frontend
- Implement authentication header utility (authHeaders.ts) for consistent API calls
- Add roles API endpoint (/api/auth/roles.ts) for role-based access control
- Update all backend functions to use consistent authentication and error handling
- Update frontend components (SessionCreationForm, TeacherDashboard, SimpleStudentView, SessionEndAndExportControls) with proper auth headers
- Update deployment script (deploy-to-azure.sh) with improved error handling
- Update staticwebapp.config.json for proper routing and authentication
- Consolidate documentation to reduce redundancy and improve maintainability

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,6 +2,18 @@
   "$schema": "https://json.schemastore.org/staticwebapp.config.json",
   "routes": [
     {
+      "route": "/teacher",
+      "allowedRoles": ["teacher"]
+    },
+    {
+      "route": "/student",
+      "allowedRoles": ["student"]
+    },
+    {
+      "route": "/dev-config",
+      "allowedRoles": ["anonymous", "authenticated"]
+    },
+    {
       "route": "/*",
       "allowedRoles": ["anonymous", "authenticated"]
     }
@@ -25,6 +37,7 @@
     }
   },
   "auth": {
+    "rolesSource": "/api/auth/roles",
     "identityProviders": {
       "azureActiveDirectory": {
         "registration": {
