docs: Reorganize documentation structure and implement live quiz backend functions
- Consolidate deployment documentation into single DEPLOYMENT.md guide
- Add ENVIRONMENTS.md for environment configuration reference
- Add LOCAL_DEVELOPMENT.md for local setup instructions
- Add LIVE_QUIZ.md for quiz feature documentation
- Add PROJECT_STATUS.md for current project status tracking
- Add STATIC_WEB_APP_SETUP.md for Azure Static Web App configuration
- Remove obsolete documentation files (AUTH_HEADERS_REFACTORING.md, CLEANUP_SUMMARY.md, DEPLOYMENT_CHECKLIST.md, etc.)
- Implement live quiz backend functions: analyzeSlide.ts, generateQuestions.ts, sendQuizQuestion.ts, submitQuizAnswer.ts
- Add quiz question submission and answer processing endpoints
- Update .gitignore to exclude deployment logs and artifacts
- Add deployment scripts: deploy-full-production.sh, start-local-prod.sh, start-local-with-openai.sh, start-production.sh
- Add secret checking script for CI/CD pipeline
- Update infrastructure Bicep templates with OpenAI and Static Web App modules
- Update environment parameters for dev and prod deployments
- Enhance SignalR broadcast utility for quiz notifications
- Reorganize documentation to improve discoverability and reduce redundancy

--- a/.gitignore
+++ b/.gitignore
@@ -75,9 +75,12 @@ test-swa-deploy.sh
 .deployment-config
 *.secret
 deployment.log
+deployment*.log
+deployment*.json
 COMPLETE_DEPLOYMENT_SUMMARY.md
 DEPLOYMENT_SUCCESS.md
 QUICK_DEPLOY_GUIDE.md
 github-token.txt
 azure-cicd-credentials.json
 backend-deploy.zip
+backend-deploy-*.zip
