--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@azure/data-tables": "^13.3.2",
     "@azure/functions": "^4.11.1",
     "@azure/identity": "^4.13.0",
+    "@azure/storage-blob": "^12.30.0",
     "@azure/web-pubsub": "^1.2.0"
   },
   "devDependencies": {
