--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,15 +1,6 @@
 # Production Environment Configuration
-
-# API Configuration - Azure Functions
-NEXT_PUBLIC_API_URL=https://func-qrattendance-dev.azurewebsites.net/api
-
-# Azure AD Configuration
+NEXT_PUBLIC_API_URL=https://func-qrattendance-prod.azurewebsites.net/api
 NEXT_PUBLIC_AAD_CLIENT_ID=dc482c34-ebaa-4239-aca3-2810a4f51728
 NEXT_PUBLIC_AAD_TENANT_ID=8ff7db19-435d-4c3c-83d3-ca0a46234f51
-NEXT_PUBLIC_AAD_REDIRECT_URI=https://red-grass-0f8bc910f.4.azurestaticapps.net/.auth/login/aad/callback
-
-# Environment - leave empty for production (falsy check)
-# NEXT_PUBLIC_ENVIRONMENT is intentionally not set for production
-
-# SignalR Configuration
-NEXT_PUBLIC_SIGNALR_URL=https://func-qrattendance-dev.azurewebsites.net/api
+NEXT_PUBLIC_AAD_REDIRECT_URI=https://ashy-desert-0fc9a700f.6.azurestaticapps.net/.auth/login/aad/callback
+NEXT_PUBLIC_SIGNALR_URL=https://func-qrattendance-prod.azurewebsites.net/api
