Refactor: Remove README files for StudentSessionView and TeacherDashboard components
Update: Modify staticwebapp.config.json to include response_type and response_mode for Azure AD login

Change: Update main.bicep to remove GitHub deployment parameters and add frontend URLs for CORS configuration

Cleanup: Remove manual deployment module for Static Web App from Bicep infrastructure

Refactor: Remove GitHub CI/CD related parameters and modules from Bicep files

Add: Create setup script for Azure AD App Registration with redirect URIs and client secret generation

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,6 @@ github-token.txt
 azure-cicd-credentials.json
 backend-deploy.zip
 backend-deploy-*.zip
+
+# Azure AD credentials
+.azure-ad-credentials
