--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,6 +1,8 @@
 # Production Environment Configuration
 NEXT_PUBLIC_API_URL=https://func-qrattendance-prod.azurewebsites.net/api
 NEXT_PUBLIC_AAD_CLIENT_ID=dc482c34-ebaa-4239-aca3-2810a4f51728
-NEXT_PUBLIC_AAD_TENANT_ID=8ff7db19-435d-4c3c-83d3-ca0a46234f51
-NEXT_PUBLIC_AAD_REDIRECT_URI=https://ashy-desert-0fc9a700f.6.azurestaticapps.net/.auth/login/aad/callback
+NEXT_PUBLIC_AAD_TENANT_ID=organizations
+NEXT_PUBLIC_AAD_REDIRECT_URI=https://yellow-beach-00e1ab00f.1.azurestaticapps.net/.auth/login/aad/callback
 NEXT_PUBLIC_SIGNALR_URL=https://func-qrattendance-prod.azurewebsites.net/api
+NEXT_PUBLIC_ENVIRONMENT=production
+NEXT_PUBLIC_FRONTEND_URL=https://yellow-beach-00e1ab00f.1.azurestaticapps.net
