--- a/frontend/staticwebapp.config.json
+++ b/frontend/staticwebapp.config.json
@@ -63,6 +63,8 @@
         },
         "login": {
           "loginParameters": [
+            "response_type=code",
+            "response_mode=query",
             "scope=openid profile email",
             "prompt=select_account"
           ]
