feat: Enable CORS credentials support and update configuration for Function App

--- a/frontend/staticwebapp.config.json
+++ b/frontend/staticwebapp.config.json
@@ -7,7 +7,7 @@
     },
     {
       "route": "/student",
-      "allowedRoles": ["student"]
+      "allowedRoles": ["anonymous", "authenticated", "student"]
     },
     {
       "route": "/dev-config",
@@ -74,15 +74,16 @@
     }
   },
   "globalHeaders": {
-    "content-security-policy": "default-src 'self' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://*.signalr.net wss://*.service.signalr.net https://*.table.core.windows.net https://login.microsoftonline.com;",
+    "content-security-policy": "default-src 'self' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://*.azurewebsites.net https://*.signalr.net wss://*.service.signalr.net https://*.table.core.windows.net https://login.microsoftonline.com;",
     "X-Content-Type-Options": "nosniff",
-    "X-Frame-Options": "DENY",
+    "X-Frame-Options": "DENY", 
     "X-XSS-Protection": "1; mode=block",
     "Referrer-Policy": "strict-origin-when-cross-origin",
     "Permissions-Policy": "camera=(self), geolocation=(self), microphone=()",
-    "Cache-Control": "no-cache, no-store, must-revalidate",
+    "Cache-Control": "no-cache, no-store, must-revalidate, max-age=0",
     "Pragma": "no-cache",
-    "Expires": "0"
+    "Expires": "0",
+    "X-CSP-Updated": "2026-02-12T15:30:00Z"
   },
   "mimeTypes": {
     ".json": "application/json",
