gitignore: Add deployment token files to prevent accidental commits
- Prevent *token*.txt files from being committed
- Add specific patterns for deployment-token.txt and production-token.txt
- Protect sensitive deployment secrets

--- a/.gitignore
+++ b/.gitignore
@@ -85,5 +85,11 @@ azure-cicd-credentials.json
 backend-deploy.zip
 backend-deploy-*.zip
 
+# Deployment tokens (sensitive)
+*token*.txt
+deployment-token.txt
+production-token.txt
+*.token
+
 # Azure AD credentials
 .azure-ad-credentials
