feat: Add safe Azure AD configuration to version control
- Add .env.azure-ad with public Client ID (safe to commit)
- Update .gitignore to be specific about what's sensitive
- Create AZURE_AD_CONFIG.md explaining security model
- Update deployment script to load Client ID from file
- Clarify: Client ID is public, only Client Secret is sensitive

The Azure AD Client ID dc482c34-ebaa-4239-aca3-2810a4f51728 is safe
to store in Git as it's meant to be public information used in frontend.

--- a/.gitignore
+++ b/.gitignore
@@ -85,11 +85,12 @@ azure-cicd-credentials.json
 backend-deploy.zip
 backend-deploy-*.zip
 
-# Deployment tokens (sensitive)
+# Deployment tokens (sensitive - contain secrets)
 *token*.txt
 deployment-token.txt
 production-token.txt
 *.token
 
-# Azure AD credentials
-.azure-ad-credentials
+# Azure AD client secrets (sensitive)
+*client*secret*
+*.secret
