feat: Update QR code generation to use dynamic base URL and enhance logging in TeacherPage and QRCodeModal

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "React/Next.js frontend for QR Chain Attendance System",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
